--- a/CustomerApp/app/src/main/res/layout/activity_refund.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_refund.xml
@@ -8,6 +8,8 @@
     android:gravity="center_horizontal"
     tools:context="com.periode4groep2.customerapp.PresentationLayer.RefundActivity">
 
+
+    <!--UI van addSaldo kopieeren-->
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar">
