--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -54,6 +54,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/order_basket"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
