--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -17,6 +17,7 @@
         android:layout_weight="1">
 
         <ExpandableListView
+            android:id="@+id/expandableListId"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             
