--- a/CustomerApp/app/src/main/res/layout/activity_order_history.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order_history.xml
@@ -38,6 +38,16 @@
                 android:text="Prijs"
                 android:textStyle="bold"
                 android:textSize="16dp"
+                android:textAlignment="center"
+                android:layout_weight="2"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="✓"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:textAlignment="center"
                 android:layout_weight="2"/>
 
         </LinearLayout>
