--- a/CustomerApp/app/src/main/res/layout/activity_custom_list_item_order_history.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_custom_list_item_order_history.xml
@@ -32,7 +32,15 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/orderHistoryPriceId"
                 android:text="€ 19,50"
-                android:layout_weight="8"/>
+                android:textAlignment="center"
+                android:layout_weight="5"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:text="✓"
+                android:textAlignment="center"/>
 
         </LinearLayout>
 
