--- a/CustomerApp/app/src/main/res/layout/activity_custom_order_list_item.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_custom_order_list_item.xml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    >
+    tools:context="com.periode4groep2.customerapp.PresentationLayer.CustomListItemOrderItem">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
+            <TextView
+                android:id="@+id/productNameTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/test_product"
+                android:layout_weight="1"
+                android:textAlignment="textStart"/>
+
+            <TextView
+                android:id="@+id/productQuantityTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="99x"
+                android:layout_weight="2"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/productTotalPriceTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="€99,99"
+                android:layout_weight="2"
+                android:textAlignment="center"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
