--- a/CustomerApp/app/src/main/res/layout/activity_refund.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_refund.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:text="@string/example_refund_text" />
+            android:hint="@string/example_refund_text" />
 
     </LinearLayout>
 
