--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -18,12 +18,12 @@
 
         <ExpandableListView
             android:id="@+id/expandableListId"
+            android:background="@color/colorBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             
         </ExpandableListView>
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -36,14 +36,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:text="Totaal:"
-            android:textSize="25dp"
-            android:paddingLeft="3dp"
-            android:gravity="center_vertical"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="Totaal:"
+                android:textSize="25dp"
+                android:paddingLeft="3dp"
+                android:gravity="center_vertical"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -63,5 +63,7 @@
             />
 
     </LinearLayout>
+
+
 
 </LinearLayout>
