--- a/CustomerApp/app/src/main/res/layout/activity_order_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order_detail.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="10dp">
+        android:layout_margin="10sp">
 
         <TextView
             android:layout_width="wrap_content"
