--- a/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
@@ -12,13 +12,15 @@
         android:id="@+id/tool_bar_no_button"
         layout="@layout/tool_bar_no_button">
     </include>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical"
         android:gravity="bottom"
-        >
+        android:orientation="vertical"
+        android:weightSum="1">
+
         <TextView
             android:id="@+id/huidigSaldoTextId"
             android:layout_width="match_parent"
@@ -27,14 +29,36 @@
             android:text="@string/current_balance_textview"
             android:textColor="@color/colorOrange"
             android:textSize="18dp" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:gravity="bottom"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <TextView
+            android:id="@+id/Euro"
+            android:layout_width="54dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.59"
+            android:gravity="right"
+            android:text="€"
+            android:textColor="@color/colorOrange"
+            android:textSize="18dp" />
+
             <TextView
                 android:id="@+id/currentBalance"
-                android:layout_width="match_parent"
+                android:layout_width="275dp"
                 android:layout_height="30dp"
-                android:gravity="center"
+                android:gravity="left"
                 android:text="@string/current_balance_view"
                 android:textColor="@color/colorOrange"
                 android:textSize="18dp" />
+
+
+        </LinearLayout>
         <TextView
             android:id="@+id/balanceID"
             android:layout_width="match_parent"
@@ -43,12 +67,11 @@
             android:text="@string/add_balance"
             android:textColor="@color/colorOrange"
             android:textSize="18dp" />
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:layout_weight="0.43">
         <EditText
             android:id="@+id/giveBalanceID"
             android:layout_width="match_parent"
@@ -66,8 +89,9 @@
             android:layout_marginRight="15dp"
             android:background="@color/colorOrange"
             android:text="@string/add_balance_button"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
     </LinearLayout>
+</LinearLayout>
 </LinearLayout>
 
 
