--- a/CustomerApp/app/src/main/res/layout/activity_refund.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_refund.xml
@@ -37,23 +37,12 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:gravity="center"
-            android:text="@string/current_balance_view"
+            android:text="@string/example_balance"
             android:textColor="@color/colorOrange"
             android:textSize="30sp"/>
 
     </LinearLayout>
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/refundTextFieldContainer"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical"-->
-        <!--android:gravity="top"-->
-        <!--&gt;-->
-
-
-
-    <!--</LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
