--- a/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
@@ -15,8 +15,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="244dp"
         android:gravity="bottom"
         android:orientation="vertical"
         android:weightSum="1">
@@ -31,29 +30,14 @@
             android:textSize="18dp" />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:gravity="bottom"
-            android:orientation="horizontal"
-            android:weightSum="1">
 
-            <TextView
-            android:id="@+id/Euro"
-            android:layout_width="54dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.59"
-            android:gravity="right"
-            android:text="€"
-            android:textColor="@color/colorOrange"
-            android:textSize="18dp" />
 
             <TextView
                 android:id="@+id/currentBalance"
                 android:layout_width="275dp"
                 android:layout_height="30dp"
                 android:gravity="left"
-                android:text="@string/current_balance_view"
+                android:text="€@string/current_balance_view"
                 android:textColor="@color/colorOrange"
                 android:textSize="18dp" />
 
@@ -92,6 +76,6 @@
             android:textSize="18sp" />
     </LinearLayout>
 </LinearLayout>
-</LinearLayout>
+
 
 
