--- a/CustomerApp/app/src/main/res/layout/activity_refund.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_refund.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.periode4groep2.customerapp.PresentationLayer.RefundActivity">
+    tools:context="com.periode4groep2.customerapp.PresentationLayer.RefundActivity"
+    android:background="@color/colorBackground">
+
 
 
     <!--UI van addSaldo kopieeren-->
@@ -18,28 +21,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
         android:gravity="bottom"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/currentBalanceHeaderTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@color/colorOrange"
-            android:textSize="18sp"
             android:text="@string/current_balance_textview"
-            />
-
-        <TextView
-            android:id="@+id/currentBalanceTextView"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:text="@string/example_balance"
             android:textColor="@color/colorOrange"
-            android:textSize="30sp"/>
+            android:textSize="18sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/euroSymbolTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/euro_symbol"
+                android:textColor="@color/colorOrange"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/currentBalanceTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/example_balance"
+                android:textColor="@color/colorOrange"
+                android:textSize="30sp" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -55,7 +73,9 @@
             android:id="@+id/refundBalanceEntryEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="12sp"
             android:gravity="top"
+            android:textAlignment="center"
             android:textSize="32sp"
             android:hint="@string/example_refund_text" />
 
