--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -21,7 +21,6 @@
             android:background="@color/colorBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            
         </ExpandableListView>
     </LinearLayout>
     <LinearLayout
@@ -40,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:text="Totaal:"
+                android:text="@string/total_textview"
                 android:textSize="25dp"
                 android:paddingLeft="3dp"
                 android:gravity="center_vertical"/>
@@ -48,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="0,00"
+                android:text="@string/total_price_textview"
                 android:textSize="25dp"
                 android:gravity="center_vertical"
                 />
