--- a/CustomerApp/app/src/main/res/layout/list_group.xml
+++ b/CustomerApp/app/src/main/res/layout/list_group.xml
@@ -11,10 +11,12 @@
     <TextView
         android:id="@+id/listGroupId"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="16dp"
-        android:textColor="@color/blacka"
+        android:layout_marginTop="2dp"
+        android:textSize="22dp"
+        android:textColor="@color/colorWhite"
+        android:background="@color/colorOrange"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="30dp" />
     </LinearLayout>
 
 
