--- a/CustomerApp/app/src/main/res/layout/list_item.xml
+++ b/CustomerApp/app/src/main/res/layout/list_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/listItemId"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:textSize="16dip"
+        android:textSize="18dp"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
