--- a/CustomerApp/app/src/main/res/layout/activity_custom_list_item_order_history.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_custom_list_item_order_history.xml
@@ -16,7 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp">
 
@@ -24,21 +23,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/orderHistoryDateId"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
                 android:text="08-05-2017"
-                android:layout_weight="2"/>
+                android:layout_weight="3"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/orderHistoryPriceId"
                 android:text="€ 19,50"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
                 android:textAlignment="center"
                 android:layout_weight="5"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
+                android:layout_weight="6"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:id="@+id/handledId"
                 android:text="✓"
                 android:textAlignment="center"/>
 
