--- a/CustomerApp/app/src/main/res/layout/activity_order_history.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order_history.xml
@@ -38,8 +38,8 @@
                 android:text="@string/price_of_the_order_textview"
                 android:textStyle="bold"
                 android:textSize="16dp"
-                android:textAlignment="center"
-                android:layout_weight="2"/>
+                android:textAlignment="textStart"
+                android:layout_weight="1.5"/>
 
             <TextView
                 android:layout_width="wrap_content"
