--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -44,20 +44,22 @@
         android:orientation="vertical"
         android:layout_weight="1"
         android:paddingTop="7dp"
-        android:id="@+id/AccountID"
+        android:id="@+id/MyOrdersID"
         >
+
         <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/icon_gebruiker"
             android:background="@color/colorBackground"
-            />
+            android:src="@drawable/ic_list" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
-            android:text="@string/my_account_button"
+            android:text="@string/my_orders_button"
             android:gravity="center_horizontal|center_vertical"
             android:textSize="20dp"
             android:layout_weight="2"
@@ -100,20 +102,20 @@
         android:layout_weight="1"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
-        android:id="@+id/MyOrdersID"
+        android:id="@+id/AccountID"
         >
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_list"
+            android:src="@drawable/icon_settings"
             android:background="@color/colorBackground"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
-            android:text="@string/my_orders_button"
+            android:text="@string/settings_button"
             android:gravity="center_horizontal|center_vertical"
             android:textSize="20dp"
             android:layout_weight="2"
