--- a/CustomerApp/app/src/main/res/layout/activity_settings.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorBackground"
-    tools:context="com.periode4groep2.customerapp.PresentationLayer.MyAccountActivity">
+    tools:context="com.periode4groep2.customerapp.PresentationLayer.SettingsActivity">
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar">
