--- a/CustomerApp/app/src/main/res/layout/list_group.xml
+++ b/CustomerApp/app/src/main/res/layout/list_group.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_weight="1">
 
     <TextView
         android:id="@+id/listGroupId"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:layout_marginTop="2dp"
-        android:textSize="22dp"
+        android:textSize="24dp"
+        android:gravity="center_vertical"
         android:textColor="@color/colorWhite"
-        android:background="@color/colorOrange"
+        android:background="#d87f00"
         android:layout_width="match_parent"
-        android:layout_height="30dp" />
-    </LinearLayout>
+        android:layout_height="50dp" />
 
+    </LinearLayout>
 
 </LinearLayout>
