--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -20,9 +20,12 @@
             android:id="@+id/expandableListId"
             android:background="@color/colorBackground"
             android:layout_width="match_parent"
+            android:groupIndicator="@null"
             android:layout_height="match_parent">
         </ExpandableListView>
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
