--- a/CustomerApp/app/src/main/res/layout/activity_order_history_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order_history_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
     tools:context="com.periode4groep2.customerapp.PresentationLayer.OrderHistoryDetailActivity">
 
     <include
@@ -158,7 +159,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
 
