--- a/CustomerApp/app/src/main/res/layout/activity_settings.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_settings.xml
@@ -92,6 +92,22 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/iban_textview"
+            android:textColor="@android:color/white"
+            android:textSize="21sp"
+            android:paddingLeft="10dp"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/my_account_iban"
+            android:text="Dummy data test text "
+            android:textSize="18sp"
+            android:paddingLeft="10dp"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:textSize="20dp"
         />
         <LinearLayout
