--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,12 +26,14 @@
         android:background="@color/colorBackground"
         android:clickable="true"
         android:orientation="vertical">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/icon_bestellen"
             />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -36,7 +43,9 @@
             android:textColor="@android:color/white"
             android:textSize="20dp"
             />
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -65,6 +74,7 @@
             android:layout_weight="2"
             android:background="@color/colorBackground"
             />
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -122,4 +132,16 @@
             android:background="@color/colorBackground"
             />
     </LinearLayout>
+
 </LinearLayout>
+
+    <ImageButton
+        android:layout_margin="15dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/circle"
+        android:src="@drawable/ic_toc"
+        android:id="@+id/unhandledOrderButton"
+        android:layout_gravity="right|bottom" />
+
+</FrameLayout>
