--- a/CustomerApp/app/src/main/res/layout/list_item.xml
+++ b/CustomerApp/app/src/main/res/layout/list_item.xml
@@ -8,14 +8,51 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
-        <TextView
-        android:id="@+id/listItemId"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="18dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/listItemId"
+                android:layout_gravity="center_vertical"
+                android:textSize="18dp"
+                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.6"/>
+
+            <ImageView
+                android:id="@+id/list_minner"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:src="@drawable/ic_minner"
+                android:paddingRight="5dp"
+                />
+
+            <TextView
+                android:id="@+id/ordered_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="22dp"
+                android:layout_gravity="center_vertical" />
+
+            <ImageView
+                android:id="@+id/list_plusser"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:src="@drawable/ic_plusser"
+                android:paddingLeft="5dp"/>
+
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
