--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -47,6 +47,7 @@
                 android:paddingLeft="3dp"
                 android:gravity="center_vertical"/>
             <TextView
+                android:id="@+id/totalOrderPrice"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
