--- a/CustomerApp/app/src/main/res/layout/activity_main.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+j<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,8 +10,8 @@
 
     <include
         android:id="@+id/tool_bar_no_button"
-        layout="@layout/tool_bar_no_button"
-        ></include>
+        layout="@layout/tool_bar_no_button">
+    </include>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             android:gravity="center"
             android:text="@string/order_app_logo"
             android:textColor="@color/colorOrange"
-            android:textSize="50dp" />
+            android:textSize="50sp" />
     </LinearLayout>
 
     <LinearLayout
