Push met zaakjes

--- a/CustomerApp/app/src/main/res/layout/activity_custom_list_item_unhandled_order_history_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_custom_list_item_unhandled_order_history_detail.xml
@@ -16,9 +16,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp">
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="7.5dp"
+            android:layout_marginBottom="7.5dp">
 
             <TextView
                 android:id="@+id/productNameTextView"
@@ -41,8 +42,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="€ 2.50"
-                android:layout_weight="8"
-                android:textAlignment="center"/>
+                android:layout_weight="7"
+                android:gravity="right"/>
 
         </LinearLayout>
 
