--- a/CustomerApp/app/src/main/res/layout/activity_custom_list_item_handled_order_history_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_custom_list_item_handled_order_history_detail.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="7.5dp"
+            android:layout_marginBottom="7.5dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp">
 
