--- a/CustomerApp/app/src/main/res/layout/activity_handled_order_history_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_handled_order_history_detail.xml
@@ -84,7 +84,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:orientation="horizontal">
 
             <TextView
@@ -100,6 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="@string/quantity_textview"
+                android:textStyle="bold"
                 android:textSize="16sp" />
 
         </LinearLayout>
@@ -108,7 +110,8 @@
             android:id="@+id/orderItemListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"></ListView>
+            android:layout_weight="1"
+            android:layout_marginBottom="7.5dp"></ListView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -130,7 +133,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/totalPrice"
                 android:text="€ 11.50"
-                android:textAlignment="viewEnd"
+                android:gravity="right"
                 android:textColor="@color/colorOrange"
                 android:textSize="16dp"
                 android:textStyle="bold"
